# anchor-size

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: parser.rs
src/: Cargo.toml  main.rs  test.rs
src/core/: mod.rs  size.rs
