[package]
name = "anchor-size"
version = "0.1.0"
edition = "2021"
description = "CLI tool to calculate Anchor account sizes"
license = "MIT"

[[bin]]
name = "anchor-size"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
solana-program = "1.18"
chrono = "0.4"
