[package]
name = "anchor-size"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor_size_core = { path = "../core", package = "anchor-size-core" }
anyhow = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
solana-program = "1.18"
